; ModuleID = '/home/carl/AnghaBench/gb-studio/buildTools/win32-x64/gbdk/examples/gb/extr_rpn.c_push.c'
source_filename = "/home/carl/AnghaBench/gb-studio/buildTools/win32-x64/gbdk/examples/gb/extr_rpn.c_push.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sp = common dso_local global i64 0, align 8
@STACKSIZE = common dso_local global i64 0, align 8
@stack = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [11 x i8] c"Stack full\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @push(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @sp, align 8
  %4 = load i64, i64* @STACKSIZE, align 8
  %5 = icmp slt i64 %3, %4
  br i1 %5, label %6, label %12

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = load i32*, i32** @stack, align 8
  %9 = load i64, i64* @sp, align 8
  %10 = add nsw i64 %9, 1
  store i64 %10, i64* @sp, align 8
  %11 = getelementptr inbounds i32, i32* %8, i64 %9
  store i32 %7, i32* %11, align 4
  br label %14

12:                                               ; preds = %1
  %13 = call i32 @puts(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  br label %14

14:                                               ; preds = %12, %6
  ret void
}

declare dso_local i32 @puts(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
